--- a/cv.html
+++ b/cv.html
@@ -48,6 +48,7 @@
         }
         ul {
             display: inline-block;
+            text-align: left;
             margin-left: 400px;
             margin-right: 400px;
         }
@@ -108,63 +109,71 @@
     <div>
         <ul>
             <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
-                <li><em>Principal Research Scientist</em> <span class="floatright">Oct 2022 - Present</span></li>
-                <li><em>Lead Research Scientist</em> <span class="floatright">Oct 2021 - Oct 2022</span></li>
-                <li><em>Senior Modeler</em> <span class="floatright">Mar 2021 - Oct 2021</span></li>
-                <li><em>Modeler</em> <span class="floatright">Aug 2019 - Mar 2021</span></li>
-                <li><em>Associate Modeler</em> <span class="floatright">Nov 2018 - Aug 2019</span></li>
+                <li><em>Principal Research Scientist</em> (Oct 2022 - Present)</li>
+                <li><em>Lead Research Scientist</em> (Oct 2021 - Oct 2022)</li>
+                <li><em>Senior Modeler</em> (Mar 2021 - Oct 2021)</li>
+                <li><em>Modeler</em> (Aug 2019 - Mar 2021)</li>
+                <li><em>Associate Modeler</em> (Nov 2018 - Aug 2019)</li>
             <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
-                <li><em>Research Assistant</em> <span class="floatright">Summer 2016</span></li>
+                <li><em>Research Assistant</em> (Summer 2016)</li>
             <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-                <li><em>Student Intern</em> <span class="floatright">Summer 2012</span></li>
+                <li><em>Student Intern</em> (Summer 2012)</li>
         </ul>
     </div>
 
     <hr>
 
     <h3>Teaching Experience</h3>
-    <ul>
-    <p><strong>Department of Mathematics and Statistics, Mount Holyoke College</strong>, 2017</p>
-    <li>MATH 102: Calculus II</li>
-    <p><strong>Department of Mathematics and Statistics, University of Massachusetts Amherst</strong>, 2013 - 2018</p>
-    <li>MATH 131: Calculus I</li>
-    <li>MATH 132: Calculus II (discussion leader)</li>
-    <li>MATH 132H: Honors Calculus II (discussion leader)</li>
-    <li>MATH 233: Multivariate Calculus</li>
-    <li>MATH 331: Ordinary Differential Equations for Scientists and Engineers</li>
-    <li>MATH 456: Mathematical Modeling (discussion leader)</li>
-    <li>STAT 240: Intro to Statistics (discussion leader &amp; online TA)</li>
-    <li>STAT 501: Methods of Applied Statistics (TA)</li>
-    <p><strong>Department of Mathematics, University of Crete, Greece</strong>, 2011 - 2012</p>
-    <li>MEM-262: Parametric Statistics (discussion leader)</li>
-    </ul>
+    <div>
+        <ul>
+            <p><strong>Department of Mathematics and Statistics, Mount Holyoke College</strong>, 2017</p>
+            <li>MATH 102: Calculus II</li>
+            <p><strong>Department of Mathematics and Statistics, University of Massachusetts Amherst</strong>, 2013 - 2018</p>
+            <li>MATH 131: Calculus I</li>
+            <li>MATH 132: Calculus II (discussion leader)</li>
+            <li>MATH 132H: Honors Calculus II (discussion leader)</li>
+            <li>MATH 233: Multivariate Calculus</li>
+            <li>MATH 331: Ordinary Differential Equations for Scientists and Engineers</li>
+            <li>MATH 456: Mathematical Modeling (discussion leader)</li>
+            <li>STAT 240: Intro to Statistics (discussion leader &amp; online TA)</li>
+            <li>STAT 501: Methods of Applied Statistics (TA)</li>
+            <p><strong>Department of Mathematics, University of Crete, Greece</strong>, 2011 - 2012</p>
+            <li>MEM-262: Parametric Statistics (discussion leader)</li>
+        </ul>
+    </div>
 
     <hr>
 
     <h3>Contributed Talks</h3>
-    <ul>
-        <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
-        <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
-        <li>Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
-    </ul>
+    <div>
+        <ul>
+            <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
+            <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
+            <li>Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
+        </ul>
+    </div>
 
     <hr>
 
     <h3>Additional conferences attended</h3>
-    <ul>
-        <li>H2O World New York, October 2019</li>
-        <li>Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
-    </ul>
+    <div>
+        <ul>
+            <li>H2O World New York, October 2019</li>
+            <li>Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
+        </ul>
+    </div>
 
     <hr>
 
     <h3>Awards and Honors</h3>
-    <ul>
-        <li><em>President's award</em>, Discover Financial Services <span class="floatright">March 2022</span></li>
-        <li><em>Excellence award</em>, Discover Financial Services <span class="floatright">November 2020</span></li>
-        <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span class="floatright">June 2012</span></li>
-        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span class="floatright">2009 - 2010</span></li>
-    </ul>
+    <div>
+        <ul>
+            <li><em>President's award</em>, Discover Financial Services (March 2022)</li>
+            <li><em>Excellence award</em>, Discover Financial Services (November 2020)</li>
+            <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece (June 2012)</li>
+            <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) (2009 - 2010)</li>
+        </ul>
+    </div>
 
     <hr>
 
