--- a/cv.html
+++ b/cv.html
@@ -11,9 +11,9 @@
         /* .floatleft {
             float:left;
         } */
-        .floatright {
+        /* .floatright {
             float:right;
-        }
+        } */
         h3 {
             text-decoration-line: underline;
             font-family: Bahnschrift;
