--- a/cv.html
+++ b/cv.html
@@ -49,8 +49,8 @@
         ul {
             display: inline-block;
             text-align: left;
-            margin-left: 400px;
-            margin-right: 400px;
+            margin-left: 100px;
+            margin-right: 100px;
         }
         @media only screen and (min-width: 600px) and (max-width: 768px) {
             ul {
@@ -85,10 +85,10 @@
     <h3>Education</h3>
     <div>
         <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2018)</li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2015)</li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece (2012 - 2013)</li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece (2008 - 2012)</li>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst, &emsp 2013 - 2018</li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst, &emsp 2013 - 2015</li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece, &emsp 2012 - 2013</li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece, &emsp 2008 - 2012</li>
         </ul>
     </div>
 
@@ -108,13 +108,13 @@
 
     <div>
         <ul>
-            <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
+            <p><b>Discover Financial Services</b>, Riverwoods, IL</p>
                 <li><em>Principal Research Scientist</em> (Oct 2022 - Present)</li>
                 <li><em>Lead Research Scientist</em> (Oct 2021 - Oct 2022)</li>
                 <li><em>Senior Modeler</em> (Mar 2021 - Oct 2021)</li>
                 <li><em>Modeler</em> (Aug 2019 - Mar 2021)</li>
                 <li><em>Associate Modeler</em> (Nov 2018 - Aug 2019)</li>
-            <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
+            <p><b>University of Massachusetts Amherst</b>, MA</p>
                 <li><em>Research Assistant</em> (Summer 2016)</li>
             <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
                 <li><em>Student Intern</em> (Summer 2012)</li>
@@ -168,10 +168,10 @@
     <h3>Awards and Honors</h3>
     <div>
         <ul>
-            <li><em>President's award</em>, Discover Financial Services (March 2022)</li>
-            <li><em>Excellence award</em>, Discover Financial Services (November 2020)</li>
-            <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece (June 2012)</li>
-            <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) (2009 - 2010)</li>
+            <li><em>President's award</em>, Discover Financial Services, March 2022</li>
+            <li><em>Excellence award</em>, Discover Financial Services, November 2020</li>
+            <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece, June 2012</li>
+            <li><em>Scholarship award</em>, State Scholarships Foundation (IKY), 2009 - 2010</li>
         </ul>
     </div>
 
