--- a/cv.html
+++ b/cv.html
@@ -70,6 +70,9 @@
                 font-size: 55%;
             }
         }
+        li:not(:last-of-type) { 
+            margin-bottom: 5px;  
+        }
     </style>
 </head>
 <body>
@@ -85,10 +88,10 @@
     <h3>Education</h3>
     <div>
         <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst, &emsp 2013 - 2018</li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst, &emsp 2013 - 2015</li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece, &emsp 2012 - 2013</li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece, &emsp 2008 - 2012</li>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst, &emsp; 2013 - 2018</li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst, &emsp; 2013 - 2015</li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece, &emsp; 2012 - 2013</li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece, &emsp; 2008 - 2012</li>
         </ul>
     </div>
 
