--- a/cv.html
+++ b/cv.html
@@ -88,10 +88,10 @@
     <h3>Education</h3>
     <div>
         <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst, &emsp; 2013 - 2018</li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst, &emsp; 2013 - 2015</li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece, &emsp; 2012 - 2013</li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece, &emsp; 2008 - 2012</li>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2018)</li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2015)</li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp;(2012 - 2013)</li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp;(2008 - 2012)</li>
         </ul>
     </div>
 
@@ -112,15 +112,15 @@
     <div>
         <ul>
             <p><b>Discover Financial Services</b>, Riverwoods, IL</p>
-                <li><em>Principal Research Scientist</em> (Oct 2022 - Present)</li>
-                <li><em>Lead Research Scientist</em> (Oct 2021 - Oct 2022)</li>
-                <li><em>Senior Modeler</em> (Mar 2021 - Oct 2021)</li>
-                <li><em>Modeler</em> (Aug 2019 - Mar 2021)</li>
-                <li><em>Associate Modeler</em> (Nov 2018 - Aug 2019)</li>
+                <li><em>Principal Research Scientist</em> &emsp;(Oct 2022 - Present)</li>
+                <li><em>Lead Research Scientist</em> &emsp;(Oct 2021 - Oct 2022)</li>
+                <li><em>Senior Modeler</em> &emsp;(Mar 2021 - Oct 2021)</li>
+                <li><em>Modeler</em> &emsp;(Aug 2019 - Mar 2021)</li>
+                <li><em>Associate Modeler</em> &emsp;(Nov 2018 - Aug 2019)</li>
             <p><b>University of Massachusetts Amherst</b>, MA</p>
-                <li><em>Research Assistant</em> (Summer 2016)</li>
-            <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-                <li><em>Student Intern</em> (Summer 2012)</li>
+                <li><em>Research Assistant</em> &emsp;(Summer 2016)</li>
+            <p><b>FORTH - IACM</b>, Crete, Greece</p>
+                <li><em>Student Intern</em> &emsp;(Summer 2012)</li>
         </ul>
     </div>
 
