--- a/cv.html
+++ b/cv.html
@@ -88,10 +88,10 @@
     <h3>Education</h3>
     <div>
         <ul>
-            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2018)</li>
-            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst (2013 - 2015)</li>
-            <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp;(2012 - 2013)</li>
-            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp;(2008 - 2012)</li>
+            <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class='right'>(2013 - 2018)</span></li>
+            <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class='right'>(2013 - 2015)</span></li>
+            <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class='right'>(2012 - 2013)</span></li>
+            <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class='right'>(2008 - 2012)</span></li>
         </ul>
     </div>
 
