--- a/research.html
+++ b/research.html
@@ -86,7 +86,6 @@
     <h3>Preprints</h3>
     <ol>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2303.10216" target="_blank" rel="noopener">[pdf_file]</a> K. Kotsiopoulos, A. Miroshnikov, K. Filom and A. Ravi Kannan, <em><span class="fontstyle0"> "Approximation of group explainers with coalition structure using Monte Carlo sampling on the product space of coalitions and features", </span></em> arXiv:2303.10216 (2023).</li>
-        <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2302.08434" target="_blank" rel="noopener">[pdf_file]</a> K. Filom, A. Miroshnikov, K. Kotsiopoulos and A. Ravi Kannan, <em><span class="fontstyle0"> "On marginal feature attributions of tree-based models", </span></em> arXiv:2302.08434 (2023).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2111.11259" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Model-agnostic bias mitigation methods with regressor distribution control for Wasserstein-based fairness metrics", </span></em> arXiv:2111.11259 (2021).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2102.10878" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, K. Filom and A. Ravi Kannan, <em><span class="fontstyle0"> "Stability theory of game-theoretic group feature explanations for machine learning models", </span></em> arXiv:2102.10878 (2021).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/1710.09071" target="_blank" rel="noopener">[pdf_file]</a> K. Kotsiopoulos, A. Miroshnikov and E. Conlon, <em><span class="fontstyle0"> "Asymptotic properties and approximation of Bayesian logspline density estimators for communication-free </span></em><em><span class="fontstyle0"> parallel computing methods</span>", </em> arXiv:1710.09071 (2018).</li>
@@ -96,6 +95,7 @@
 
     <h3>Published/Accepted Papers</h3>
     <ol>
+        <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2302.08434" target="_blank" rel="noopener">[pdf_file]</a> K. Filom, A. Miroshnikov, K. Kotsiopoulos and A. Ravi Kannan, <em><span class="fontstyle0"> "On marginal feature attributions of tree-based models", </span></em> (Accepted 2024) To appear in <em>Foundations of Data Science</em>.</li>
         <li style="text-align:justify;"> <a href="https://link.springer.com/content/pdf/10.1007/s10994-022-06213-9.pdf" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em> Machine Learning (2022), doi:10.1007/s10994-022-06213-9</li>
     </ol>
 
