--- a/research.html
+++ b/research.html
@@ -95,8 +95,8 @@
 
     <h3>Published/Accepted Papers</h3>
     <ol>
-        <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2302.08434" target="_blank" rel="noopener">[pdf_file]</a> K. Filom, A. Miroshnikov, K. Kotsiopoulos and A. Ravi Kannan, <em><span class="fontstyle0"> "On marginal feature attributions of tree-based models", </span></em> (Accepted 2024) To appear in <em>Foundations of Data Science</em>.</li>
-        <li style="text-align:justify;"> <a href="https://link.springer.com/content/pdf/10.1007/s10994-022-06213-9.pdf" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em> Machine Learning (2022), doi:10.1007/s10994-022-06213-9</li>
+        <li style="text-align:justify;"> <a href="https://www.aimsciences.org/article/doi/10.3934/fods.2024021" target="_blank" rel="noopener">[link]</a> K. Filom, A. Miroshnikov, K. Kotsiopoulos and A. Ravi Kannan, <em><span class="fontstyle0"> "On marginal feature attributions of tree-based models", </span></em> Foundations of Data Science (2024), doi:10.3934/fods.2024021.</li>
+        <li style="text-align:justify;"> <a href="https://link.springer.com/article/10.1007/s10994-022-06213-9" target="_blank" rel="noopener">[link]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em> Machine Learning (2022), doi:10.1007/s10994-022-06213-9</li>
     </ol>
 
     <hr>
