--- a/research.html
+++ b/research.html
@@ -78,7 +78,7 @@
             <li>Dynamical systems and ergodic theory</li>
             <li>Statistics with applications to data science</li>
             <li>Optimization models and approximation techniques</li>
-            <li>AI/Machine Learning: <em>theory and applications of Explainable AI</em></li>
+            <li>AI/Machine Learning: <em>supervised learning, clustering, theory and applications of Explainable AI</em></li>
         </ul>
     </div>
 
