--- a/cv.html
+++ b/cv.html
@@ -100,7 +100,7 @@
     <h3>Technical Proficiencies</h3>
     <div>
         <ul>
-            <li><b>Programming languages</b>: Java, Python, R, C/C++, SQL, R and FORTRAN</li>
+            <li><b>Programming languages</b>: Java, Python, R, C/C++, SQL and FORTRAN</li>
             <li><b>Markup languages</b>: LaTeX, HTML and CSS</li>
         </ul>    
     </div>
