--- a/research.html
+++ b/research.html
@@ -102,6 +102,9 @@
 
     <h3>Patent Applications</h3>
     <ol>
+        <li style="text-align:justify;"> <a href="https://patentcenter.uspto.gov/applications/18111823" target="_blank" rel="noopener">[link]</a> US-20240281450-A1, <em><span class="fontstyle0"> "COMPUTING SYSTEM AND METHOD FOR APPLYING MONTE CARLO ESTIMATION TO DETERMINE THE CONTRIBUTION OF DEPENDENT INPUT VARIABLE GROUPS ON THE OUTPUT OF A DATA SCIENCE MODEL", </span></em>(2023)</li>
+        <li style="text-align:justify;"> <a href="https://patentcenter.uspto.gov/applications/18111826" target="_blank" rel="noopener">[link]</a> US-20240281670-A1, <em><span class="fontstyle0"> "COMPUTING SYSTEM AND METHOD FOR APPLYING MONTE CARLO ESTIMATION TO DETERMINE THE CONTRIBUTION OF INDEPENDENT INPUT VARIABLES WITHIN DEPENDENT VARIABLE GROUPS ON THE OUTPUT OF A DATA SCIENCE MODEL", </span></em>(2023)</li>
+        <li style="text-align:justify;"> <a href="https://patentcenter.uspto.gov/applications/18111825" target="_blank" rel="noopener">[link]</a> US-20240281669-A1, <em><span class="fontstyle0"> "COMPUTING SYSTEM AND METHOD FOR APPLYING MONTE CARLO ESTIMATION TO DETERMINE THE CONTRIBUTION OF INDEPENDENT INPUT VARIABLES WITHIN DEPENDENT VARIABLE GROUPS ON THE OUTPUT OF A DATA SCIENCE MODEL", </span></em>(2023)</li>
         <li style="text-align:justify;"> <a href="https://patentcenter.uspto.gov/applications/17900753" target="_blank" rel="noopener">[link]</a> US-20220414766-A1, <em><span class="fontstyle0"> "COMPUTING SYSTEM AND METHOD FOR CREATING A DATA SCIENCE MODEL HAVING REDUCED BIAS", </span></em>(2022)</li>
         <li style="text-align:justify;"> <a href="https://patentcenter.uspto.gov/applications/17322828" target="_blank" rel="noopener">[link]</a> US-20210383275-A1, <em><span class="fontstyle0"> "SYSTEM AND METHOD FOR UTILIZING GROUPED PARTIAL DEPENDENCE PLOTS AND GAME-THEORETIC CONCEPTS AND THEIR EXTENSIONS IN THE GENERATION OF ADVERSE ACTION REASON CODES", </span></em>(2021)</li>
     </ol>
