--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div>
         <ul>
             <li> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
-            <li> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
+            <li> <b>LinkedIn</b>: https://www.linkedin.com/in/kkotsiop</li>
         </ul>
     </div>
 </body>
