added siam mds24

--- a/cv.html
+++ b/cv.html
@@ -150,7 +150,7 @@
     <h3>Contributed Talks</h3>
     <div>
         <ul>
-            <li>SIAM Conference on Mathematics of Data Science (MDS24), Atlanta, GA, “<em>Approximation of group explainers with coalition structure using Monte Carlo sampling</em>”, October 2024</li>
+            <li>SIAM Conference on Mathematics of Data Science (MDS24), Atlanta, GA, “<em>Approximation of group explainers with coalition structure using Monte Carlo sampling</em>”, (poster session) October 2024</li>
             <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
             <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
             <li>Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
