--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         div {
             text-align: center;
+            font-family: 'Trebuchet MS';
         }
         p {
             margin-right: 200px;
