--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         p {
             margin-right: 200px;
             margin-left: 200px;
-            font-family: 'Trebuchet MS';
+            font-family: 'Roboto';
         }
         @media only screen and (max-width: 768px) {
             p {
