--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <style>
         div {
             text-align: center;
-            font-family: 'Trebuchet MS';
         }
         p {
             margin-right: 200px;
             margin-left: 200px;
-            font-family: 'Roboto';
+            font-family: Roboto;
         }
         @media only screen and (max-width: 768px) {
             p {
@@ -50,6 +49,7 @@
             display: inline-block;
             text-align: left;
             margin-top: 1px;
+            font-family: Verdana;
         }
     </style>
 </head>
