--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             display: inline-block;
             text-align: left;
             margin-top: 1px;
-            font-family: Verdana;
+            font-family: Tahoma;
         }
     </style>
 </head>
