--- a/cv.html
+++ b/cv.html
@@ -78,8 +78,8 @@
 <body>
     <div class="headpic">
         <img src="my_photo.jpg" alt="My_Picture.com" width="127" height="162" class="ImageBorder"/>
-        <p style="font-size: 150%;font-family: Verdana;background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
-        <p>
+        <p style="font-size: 150%;font-family: 'Trebuchet MS';background-color: gainsboro;color: darkblue;" class="TextBorder">Konstandinos Kotsiopoulos</p>
+        <p style="font-family: Bahnschrift;">
             <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
             <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
