--- a/research.html
+++ b/research.html
@@ -43,6 +43,7 @@
         ol {
             margin-right: 100px;
             margin-left: 100px;
+            font-family: Verdana;
         }
         @media only screen and (max-width: 768px) {
             ol {
