--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
         ol {
             margin-right: 100px;
             margin-left: 100px;
-            font-family: 'Helvetica Neue';
+            font-family: Helvetica;
         }
         @media only screen and (max-width: 768px) {
             ol {
