--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
             display: inline-block;
             text-align: left;
             margin-top: 1px;
-            font-family: Roboto;
+            font-family: Georgia;
         }
         li:not(:last-of-type) { 
             margin-bottom: 5px;  
