--- a/cv.html
+++ b/cv.html
@@ -51,6 +51,7 @@
             text-align: left;
             margin-left: 100px;
             margin-right: 100px;
+            font-family: Cambria;
         }
         @media only screen and (min-width: 600px) and (max-width: 768px) {
             ul {
@@ -59,6 +60,7 @@
                 margin-left: 10px;
                 margin-right: 30px;
                 font-size: 75%;
+                font-family: Cambria;
             }
         }
         @media only screen and (max-width: 600px) {
@@ -68,6 +70,7 @@
                 margin-left: 0px;
                 margin-right: 0px;
                 font-size: 55%;
+                font-family: Cambria;
             }
         }
         li:not(:last-of-type) { 
