--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         p {
             margin-right: 200px;
             margin-left: 200px;
-            font-family: Helvetica;
+            font-family: Tahoma;
         }
         @media only screen and (max-width: 768px) {
             p {
