--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             p {
                 margin-left: 0px;
                 margin-right: 5px;
+                font-family: Tahoma;
             }
         }
         h3 {
