--- a/research.html
+++ b/research.html
@@ -49,6 +49,7 @@
             ol {
                 margin-left: 0px;
                 margin-right: 5px;
+                font-family: Cambria;
             }
         }
         ul {
