--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <h3>About me</h3>
     <p style="text-align:justify;">Graduated with a <em>Ph.D. in Mathematics</em> from the University of Massachusetts Amherst. My primary advisor was Professor Richard S. Ellis and my research with him focused on the asymptotic behavior of stochastic dynamical systems and properties of their invariant measures. Furthermore, I've collaborated with Professors Erin Conlon, my co-advisor, and Alexey Miroshnikov on establishing asymptotic properties of Bayesian statistical methods for data science. My thesis can be found on Scholarworks@UMass Amherst <a href="https://scholarworks.umass.edu/dissertations_2/1316/" target="_blank">here</a>.</p>
-    <p style="text-align:justify;">Currently, I'm a <em>Principal Research Scientist</em> at <strong>Discover Financial Services</strong>. My work there involves researching and developing novel data science approaches to solve business problems and provide support to various teams as needed. A specific area of research I have focused on is AI/Machine Learning interpretability.</p>
+    <p style="text-align:justify;">Currently, I'm a <em>Principal Research Scientist</em> at <strong>Discover, now part of Capital One</strong>. My work there involves researching and developing novel data science approaches to solve business problems and provide support to various teams as needed. A specific area of research I have focused on is AI/Machine Learning interpretability.</p>
     
     <hr>
 
