--- a/research.html
+++ b/research.html
@@ -89,6 +89,7 @@
 
     <h3>Preprints</h3>
     <ol>
+        <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2504.01223" target="_blank" rel="noopener">[link]</a> R. Franks, A. Miroshnikov and K. Kotsiopoulos, <em><span class="fontstyle0"> "Explainable post-training bias mitigation with distribution-based fairness metrics", </span></em> arXiv:2504.01223 (2025).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2303.10216" target="_blank" rel="noopener">[link]</a> K. Kotsiopoulos, A. Miroshnikov, K. Filom and A. Ravi Kannan, <em><span class="fontstyle0"> "Approximation of group explainers with coalition structure using Monte Carlo sampling on the product space of coalitions and features", </span></em> arXiv:2303.10216 (2023).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2111.11259" target="_blank" rel="noopener">[link]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Model-agnostic bias mitigation methods with regressor distribution control for Wasserstein-based fairness metrics", </span></em> arXiv:2111.11259 (2021).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2102.10878" target="_blank" rel="noopener">[link]</a> A. Miroshnikov, K. Kotsiopoulos, K. Filom and A. Ravi Kannan, <em><span class="fontstyle0"> "Stability theory of game-theoretic group feature explanations for machine learning models", </span></em> arXiv:2102.10878 (2021).</li>
