--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
         </p>
     </div>
 
-    <h3>Work/Research experience</h3>
+    <h3>Work Experience</h3>
 
     <div>
         <ul>
@@ -163,7 +163,7 @@
 
     <hr>
 
-    <h3>Additional conferences attended</h3>
+    <h3>Additional Conferences Attended</h3>
     <div>
         <ul>
             <li>H2O World New York, October 2019</li>
