Updated bio and position

--- a/cv.html
+++ b/cv.html
@@ -93,8 +93,10 @@
 
     <div>
         <ul>
+            <p><b>Capital One</b>, McLean, VA</p>
+                <li><em>Manager, Data Science</em> (Jan 2026 - Present)</li>
             <p><b>Discover Financial Services</b>, Riverwoods, IL</p>
-                <li><em>Principal Research Scientist</em> (Oct 2022 - Present)</li>
+                <li><em>Principal Research Scientist</em> (Oct 2022 - Jan 2026)</li>
                 <li><em>Lead Research Scientist</em> (Oct 2021 - Oct 2022)</li>
                 <li><em>Senior Modeler</em> (Mar 2021 - Oct 2021)</li>
                 <li><em>Modeler</em> (Aug 2019 - Mar 2021)</li>
